@@ -1,6 +1,11 @@
 CHANGES IN VERSION 1.5.0
 ------------------------
 
+NEW FEATURES
+
+    o filterVcf for creating one VCF file from another, using
+      FilterRules
+
 MODIFICATIONS
 
     o writeVcf,connection-method accepts connections with open="a",
